Published multiple files

--- a/src/site/notes/程序员的自我修养/分布式系统之一：分布式事务和一致性.md
+++ b/src/site/notes/程序员的自我修养/分布式系统之一：分布式事务和一致性.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"///","title":"事务和ACID","tags":["分布式","WLB"]}
+{"dg-publish":true,"dg-permalink":"distributed-system-transaction-and-consistency","permalink":"/distributed-system-transaction-and-consistency/","title":"事务和ACID","tags":["分布式","WLB"]}
 ---
 
 
