--- a/src/site/notes/程序员的自我修养/区块链技术和比特币.md
+++ b/src/site/notes/程序员的自我修养/区块链技术和比特币.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"///","title":"区块链技术和比特币","tags":["区块链"]}
+{"dg-publish":true,"dg-permalink":"blockchain-bitcoin","permalink":"/blockchain-bitcoin/","title":"区块链技术和比特币","tags":["区块链"]}
 ---
 
 
